# MlOpsProject

./: .gitignore  README.md  __init__.py  pyproject.toml  setup.cfg  tox.ini
genre_model/: __init__.py  config.yml  model_init.py  pipeline.py  predict.py  train_pipeline.py
genre_model/config/: core.py
genre_model/datasets/: test.csv
genre_model/processing/: data_manager.py  feature_extraction.py  validation.py
genre_model/trained_models/: genre_model_output_v0.0.2.pkl
requirements/: dev_requirements.txt  requirements.txt  test_requirements.txt
tests/: conftest.py  test_extract_features.py  test_prediction.py
